--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,7 @@
 ---
+import '../styles/global.css';
 import Navbar from '@components/Navbar.astro';
+import Analytics from '@vercel/analytics/astro';
 
 interface Props {
 	title: string;
@@ -22,6 +24,7 @@ const { title, description } = Astro.props;
 	<body class="bg-white dark:bg-zinc-950">
 		<Navbar />
 		<slot />
+		<Analytics />
 	</body>
 </html>
 <style is:global>
